   Damien Doligez)

- #10698, #10726: Free the alternate signal stack when the main OCaml
   code or an OCaml thread stops
  (Xavier Leroy, review by David Allsopp and Damien Doligez)

- #10730, 10731: Fix bug in `Obj.reachable_words` causing a slowdown when called
  multiple time (Alain Frisch, report by ygrek, review by Xavier Leroy)

### Code generation and optimizations:

- #10578: Increase the number of integer registers used for
  parameter passing on PowerPC (16 registers) and on s390x (8 registers).
  (Xavier Leroy, review by Mark Shinwell)

- #10591, #10615: Tune the heuristic for CSE of integer constants
  so as to avoid excessive CSE on compiler-generated constants
  and long register allocation times.
  (Xavier Leroy, report by Edwin Török, review by Nicolás Ojeda Bär)

- #10595: Tail calls with up to 64 arguments are guaranteed to be compiled
  as tail calls.  To this end, memory locations in the domain state
  are used for passing arguments that do not fit in registers.
  (Xavier Leroy, review by Vincent Laviron)

- #10681: Enforce boolean conditions for the native backend
  (Vincent Laviron, review by Gabriel Scherer)

- #10719: Ensure that build_apply respects Lambda.max_arity
  (Stephen Dolan, review by Xavier Leroy)

- #10728: Ensure that functions are evaluated after their arguments
  (Stephen Dolan, review by Mark Shinwell)

- #10732: Ensure right-to-left evaluation of arguments in cmm_helpers
  (Greta Yorsh, review by Xavier Leroy)

### Standard library:

* #10710: Add UTF tools, codecs and validations to the Uchar, Bytes and
  String modules.
  (Daniel Bünzli, review by Florian Angeletti, Nicolás Ojeda Bär, Alain
   Frisch and Gabriel Scherer)

* #10622: Annotate `Uchar.t` with immediate attribute
  (Hongbo Zhang, reivew by Gabriel Scherer and Nicolás Ojeda Bär)

* #7812, #10475: `Filename.chop_suffix name suff` now checks that `suff`
  is actually a suffix of `name` and raises Invalid_argument otherwise.